--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "boxen": "^5.1.2",
     "chalk": "^4.1.2",
     "figlet": "^1.8.0",
     "node-fetch": "2",
